# cgal-pybind

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  TODO.md  build.sh  setup.py
data/: test.off  test.txt
examples/: example.ipynb  requirements.txt  test.py
extlib/: CMakeLists.txt
src/: cgal_bind.cpp  point.cpp  surface_mesh.cpp
src/cgal_pybind/: __init__.py  cgal_bind.cpp  point.cpp  polyhedron.cpp  test.cpp  version.py
test/: test_contract.py
